--- a/css/style.css
+++ b/css/style.css
@@ -118,11 +118,12 @@ body{
   background: #1F2738;
   height: 36px;
   margin: 0px;
+  text-align: center;
 }
 
 #app-nav nav ul li{
+	display: inline-block;
   text-decoration: none;
-  float: left;
   padding: 0 6%;
   height: 100%;
 }
@@ -132,6 +133,7 @@ body{
   text-decoration: none;
   color: #7CD3C8;
   padding-top: 17%;
+  font-weight: bold;
 }
 
 .loader {
