--- a/css/style.css
+++ b/css/style.css
@@ -124,15 +124,15 @@ body{
 #app-nav nav ul li{
 	display: inline-block;
   text-decoration: none;
-  padding: 0 6%;
   height: 100%;
+  width: 15%;
 }
 
 #app-nav nav ul li a{
   display: block;
   text-decoration: none;
   color: #7CD3C8;
-  padding-top: 17%;
+  padding-top: 3%;
   font-weight: bold;
 }
 
